# scripts

local-ai-agent-for-markdown-files/: .gitignore  README.md  main.py  pyproject.toml
local-ai-agent-for-markdown-files/docs/: intro.md  linux.md  macos.md
